# buaa_embedding_2020

./: .gitignore
exp2/: README.md  compile.sh  pthread_uart.c  thread_create_join.c  thread_create_sem.c  uart_test.c
exp3/gpio/: GPIO_CTL.h  Makefile  compile.sh  compile_commands.json  constant.h  gpio_in.c  gpio_in_ext.c  gpio_out.c  test.c  util.cpp  util.h
exp3/gpio/testcase/: interoperability.c
exp3/gpio_int/: .module_test.ko.cmd  .module_test.mod.o.cmd  .module_test.o.cmd  Makefile  gpio_in_modu.c  gpio_in_modu.mod.c  modules.order
exp3/gpio_int/.tmp_versions/: module_test.mod
exp5/: Makefile  Readme.txt  modules.order  myzr_zlg7290_read_extention.c  myzr_zlg7290_read_extention.mod.c  myzr_zlg7290_student.c  myzr_zlg7290_write.c  myzr_zlg7290_write.mod.c  数码管（ZLG7290）驱动与应用编程实验.docx
exp6/: .gitignore  CMakeLists.txt  Kbuild.in  clock.c  extra_2.c  extra_3.c  led_hex.c  led_ioctl.h  led_scanf.c  myzr_zlg7290.c  sync.sh  zlg7290_ioctl.c
